# MYSDR_2024-2025

./: README.md
Prácticas/Ejemplos/: base.py  example_friction.py  example_friction_door.py  example_prismatic.py
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/: CMakeLists.txt  package.xml
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/config/: rover_controllers.yaml
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/graphics/: plots.py
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/graphics/rosbag2_2025_06_11-16_10_52/: metadata.yaml  rosbag2_2025_06_11-16_10_52_0.mcap
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/meshes/dae/: Cylinder.001.dae  Cylinder.002.dae  Cylinder.011.dae  Cylinder.015.dae
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/robots/: robot.urdf.xacro
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/rviz/: robot.rviz
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/urdf/: ros2_control.urdf.xacro
Prácticas/Práctica 3: Simulación de Robots usando Middleware/src/robot_model_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
(+122 files in other folders)
