<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_model_description</name>
  <version>0.0.0</version>
  <description>Práctica 3: Simulación de Robots usando Middleware</description>
  <maintainer email="a.leon.2020@alumnos.urjc.es">Alberto León</maintainer>
  <license>LICENSE</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <!-- Packages for building and running the robot -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Packages for teleoperation-->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mix</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>